# freecam

./: .clang_complete  CMakeLists.txt  EmbedShaders.cmake  TODO.txt
lib/Volk/: volk.h
src/: embeded_shaders.h  embeded_shaders.hpp  header_only_impl.cpp  main.cpp  volk.c
src/shaders/: block.frag  block.vert  shader.frag  shader.vert
